Commit+Push Test Case 3

--- a/metadata.properties
+++ b/metadata.properties
@@ -1,4 +1,4 @@
 #
-#Thu Apr 28 17:09:38 EDT 2016
-datasourceNames=
-ddlScriptPaths=
+#Thu Apr 28 17:15:52 EDT 2016
+datasourceNames=jdbc/ds2
+ddlScriptPaths=Dynamic Sail Components.sql
